Add new staff illustrations

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -98,7 +98,7 @@ menuorder: 4
       <div id="person-al" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Al Duncan" />
+          <img class="person-image" src="{{ "/img/people/al.png " | prepend: site.baseurl }}" alt="Al Duncan" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -178,7 +178,7 @@ menuorder: 4
       <div id="person-andy" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Andy Wilkinson" />
+          <img class="person-image" src="{{ "/img/people/andy.png " | prepend: site.baseurl }}" alt="Andy Wilkinson" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -214,7 +214,7 @@ menuorder: 4
       <div id="person-dominic" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Dominic Jarvis" />
+          <img class="person-image" src="{{ "/img/people/dominic.png " | prepend: site.baseurl }}" alt="Dominic Jarvis" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -775,7 +775,7 @@ menuorder: 4
       <div id="person-kaylene" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-female.png " | prepend: site.baseurl }}" alt="Kaylene Wakefield" />
+          <img class="person-image" src="{{ "/img/people/kaylene.png " | prepend: site.baseurl }}" alt="Kaylene Wakefield" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -933,7 +933,7 @@ menuorder: 4
       <div id="person-mitch" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Mitch Statz" />
+          <img class="person-image" src="{{ "/img/people/mitch.png " | prepend: site.baseurl }}" alt="Mitch Statz" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
@@ -1013,7 +1013,7 @@ menuorder: 4
       <div id="person-sam" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png " | prepend: site.baseurl }}" alt="Sam Bailey" />
+          <img class="person-image" src="{{ "/img/people/sam.png " | prepend: site.baseurl }}" alt="Sam Bailey" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png " | prepend: site.baseurl }}" alt="" />
