Add open graph meta tags for social media

--- a/src/case-studies/appraisal-connector/index.html
+++ b/src/case-studies/appraisal-connector/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Case Studies | Appraisal Connector
 casestudyname: Appraisal Connector
 casestudyid: 3
+image: /img/case-studies/interlead-1.jpg
+excerpt: Interlead chose Media Suite to develop the software behind Appraisal Connector&trade; - an online appraisal system designed to enhance the professional learning of New Zealand teachers.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
