--- a/src/case-studies/ewater/index.html
+++ b/src/case-studies/ewater/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Case Studies | eWater
 casestudyname: eWater
 casestudyid: 5
+image: /img/case-studies/ewater-1.jpg
+excerpt: Marlborough’s water has never been more accessible.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
