--- a/src/case-studies/forward-works-viewer/index.html
+++ b/src/case-studies/forward-works-viewer/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Case Studies | Forward Works Viewer
 casestudyname: Forward Works Viewer
 casestudyid: 2
+excerpt: Media Suite partnered with North South GIS and Jacobs Engineering Group to deliver the Forward Works Viewer as part of The Canterbury Spatial Data Infrastructure projects being developed by Land Information New Zealand.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
