--- a/src/case-studies/marlborough-cruise-guide/index.html
+++ b/src/case-studies/marlborough-cruise-guide/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Case Studies | Cruise Guide
 casestudyname: Cruise Guide
 casestudyid: 0
+image: /img/case-studies/cruise-guide-1.jpg
+excerpt: Cruise Guide is the perfect FREE sailing companion for exploring the Marlborough Sounds.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
