--- a/src/case-studies/resource-consenting/index.html
+++ b/src/case-studies/resource-consenting/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Case Studies | Resource Consenting
 casestudyname: Resource Consenting
 casestudyid: 6
+image: /img/case-studies/resc-1.jpg
+excerpt: Resource Consenting delivers a quality user experience while providing valuable, timely data for local and central government.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
