--- a/src/case-studies/tmp-for-christchurch/index.html
+++ b/src/case-studies/tmp-for-christchurch/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Case Studies | TMP for Christchurch
 casestudyname: TMP for Christchurch
 casestudyid: 4
+image: /img/case-studies/tmp-1.jpg
+excerpt: Media Suite built the system that is managing Christchurch’s roadworks.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
