--- a/src/case-studies/transport-for-christchurch/index.html
+++ b/src/case-studies/transport-for-christchurch/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Case Studies | Transport for Christchurch
 casestudyname: Transport for Christchurch
 casestudyid: 1
+image: /img/case-studies/tfc-1.jpg
+excerpt: In the wake of the Canterbury earthquakes, Media Suite was engaged by the Christchurch Transport Operations Centre to develop a long-term, web-based communication channel for the travelling public in the greater Christchurch region.
 ---
 <div id="main-wrap" class="internal-page case-study">
 
