Add MWS, remove TMP for CHCH

--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -30,6 +30,25 @@ menuorder: 2
         </div> <!--.item-text -->
       </div>  <!-- .case-study-item -->
 
+      <div id="csi-myworksites" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/myworksites" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-myworksites.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/myworksites" | prepend: site.baseurl }}">MyWorksites</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/myworksites" | prepend: site.baseurl }}">NZ Road Controlling Authorities</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-cog tip"></i>
+            </div>
+            <p>Media Suite partnered with roadworking authorities to build MyWorksites. This system operates in Christchurch and Auckland, managing roadworks end-to-end with minimal disruption for road users.</p>
+            <a href="{{ "/case-studies/myworksites" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+          </div>
+        </div> <!-- .item-text -->
+      </div> <!-- .case-study-item -->
+
       <div id="csi-ewater" class="case-study-item clearfix">
         <a href="{{ "/case-studies/ewater" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-ewater.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
@@ -125,25 +144,6 @@ menuorder: 2
             </div>
             <p>Media Suite developed the online appraisal system which is enhancing the professional learning of New Zealand teachers.</p>
             <a href="{{ "/case-studies/appraisal-connector" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
-          </div>
-        </div> <!-- .item-text -->
-      </div> <!-- .case-study-item -->
-
-      <div id="csi-tmp" class="case-study-item clearfix">
-        <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-tmp-for-christchurch.jpg" | prepend: site.baseurl }}" alt="" class="jiggle" />
-        </a>
-        <div class="item-text">
-          <div class="item-text-head">
-            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">TMP for Christchurch</a></h2>
-            <h3 class="item-sub-heading"><a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council / NZTA</a></h3>
-          </div>
-          <div class="item-text-body">
-            <div class="item-icons">
-              <i class="icon icon-cog tip"></i>
-            </div>
-            <p>Media Suite built the system that is managing Christchurch’s Roadworks.</p>
-            <a href="{{ "/case-studies/tmp-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!-- .item-text -->
       </div> <!-- .case-study-item -->
