Update video to exclude audio track

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@ ishome: true
     </div> <!-- #home-panel-nav -->
     <div class="covervid-wrapper">
       <img src="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}" alt="" class="invisible" />
-      <video class="js-covervid-video" poster="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}" autoplay loop>
+      <video class="js-covervid-video" poster="{{ "/img/video-first-frame.jpg" | prepend: site.baseurl }}" autoplay loop muted>
         <!-- src added via main.js -->
       </video>
     </div> <!-- .covervid-wrapper -->
