Added gorries, hasans and waynes profile description and image

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -454,6 +454,42 @@ menuorder: 4
       </div>
       <!-- .person-wrap -->
 
+      <!-- Gorrie -->
+      <div id="person-Gorrie" class="person-wrap js-iso-element">
+        <a href="#" class="person js-show-bio">
+          <div class="loader icon-spin1"></div>
+          <img class="person-image" src="{{ "/img/people/placeholder-male.png" | prepend: site.baseurl }}" alt="Gorrie Coe" />
+          <span class="burst-wrap scale-in">
+            <span class="burst-text fancy-pants-font lowercase">Bio</span>
+            <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
+            <img class="burst-shadow bio-rotate" src="{{ "/img/people/starburst-shadow.png" | prepend: site.baseurl }}" alt="" />
+          </span>
+        </a>
+        <div class="bio-wrap">
+          <div class="bio-inner">
+            <div class="faux-table">
+              <div class="faux-table-cell">
+                <div class="bio-head">
+                  <h2 class="bio-heading">Gorrie Coe</h2>
+                  <h3 class="bio-sub">UI Developer</h3>
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-gorrie.jpg" | prepend: site.baseurl }}" alt="Gorrie" />
+                  </div>
+                </div>
+                <div class="bio-body">
+                  <p>Raised in good old Timaru, Gorrie is now firmly entrenched in Christchurch, living in Woolston with his wife, young daughter and rescue dog, Ziggy. He loves a bit of CSS, JavaScript and PHP, with some Silverstripe experience in the mix. He’s looking forward to digging his teeth into some larger Media Suite software projects where he can really grow his skillset. Gorrie used to have hobbies, like running and gaming (all kinds), but since he became a dad, he’s more of a Lyttelton Farmers Market lover, playground enthusiast and pancake chef. You might spot him walking to work through the scenic Charlesworth Reserve.</p>
+                  <div class="fancy-pants-font js-blog-link" data-blog-link="/author/gorrie"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- .bio-inner -->
+        </div>
+        <!-- .bio-wrap -->
+        <h3 class="person-name-hover">Gorrie</h3>
+      </div>
+      <!-- .person-wrap -->
+
       <!-- Greta -->
       <div id="person-greta" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
@@ -508,12 +544,12 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">Hasan Rayan</h2>
                   <h3 class="bio-sub">Full Stack Developer</h3>
-                  <!-- <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-hasan.jpg" | prepend: site.baseurl }}" alt="Greta" />
-                  </div> -->
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-hasan.jpg" | prepend: site.baseurl }}" alt="Hasan" />
+                  </div>
                 </div>
                 <div class="bio-body">
-                  <p>Bio coming soon&hellip;</p>
+                  <p>Finally, someone’s moving from Australia to New Zealand! Hasan joins Media Suite from Perth, where he’s spent the last three years building apps and hunting for aliens (analysing and converting data from outer space for scientific research using computer software). This Syrian-born developer specialises in Python and Javascript, and has a history in business acceleration incubators in Dubai, satellite broadcasting and super-computing. Hasan is a former football player (now enthusiastic football watcher), movie lover and chess buff. His next stop is New Zealand, with his wife, two daughters, and a fish called Jack. </p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/hasan"></div>
                 </div>
               </div>
@@ -1228,12 +1264,12 @@ menuorder: 4
                 <div class="bio-head">
                   <h2 class="bio-heading">Wayne Carter</h2>
                   <h3 class="bio-sub">Full Stack Developer</h3>
-                  <!-- <div class="js-image-fill bio-real-image">
-                    <img src="{{ "/img/people/real-wayne.jpg" | prepend: site.baseurl }}" alt="Greta" />
-                  </div> -->
+                  <div class="js-image-fill bio-real-image">
+                    <img src="{{ "/img/people/real-wayne.jpg" | prepend: site.baseurl }}" alt="Wayne" />
+                  </div>
                 </div>
                 <div class="bio-body">
-                  <p>Bio coming soon&hellip;</p>
+                  <p>Wayne has been in software development since computers were pedal-powered and Whanganui was the place to be. A Full Stack dev with specialties in Ruby and Python, Wayne has 30 years experience in private and government work. These days, he likes being involved in projects that have meaningful impact on people’s lives. An amateur opera singer and flat white enthusiast, you’ll find him off on a biking holiday with his wife, or hitting the Canterbury roads, hills or trails.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/wayne"></div>
                 </div>
               </div>
