Updated gorries profile

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -477,7 +477,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Raised in good old Timaru, Gorrie is now firmly entrenched in Christchurch, living in Woolston with his wife, young daughter and rescue dog, Ziggy. He loves a bit of CSS, JavaScript and PHP, with some Silverstripe experience in the mix. He’s looking forward to digging his teeth into some larger Media Suite software projects where he can really grow his skillset. Gorrie used to have hobbies, like running and gaming (all kinds), but since he became a dad, he’s more of a Lyttelton Farmers Market lover, playground enthusiast and pancake chef. You might spot him walking to work through the scenic Charlesworth Reserve.</p>
+                  <p>Raised in good old Timaru, Gorrie is now firmly entrenched in Christchurch, living in Woolston with his wife, young daughter and rescue dog, Ziggy. He loves a bit of CSS, JavaScript and PHP, with some Silverstripe experience in the mix. He’s all about big software projects and challenging problems to solve. Gorrie used to have hobbies, like running and gaming (all kinds), but since he became a dad, he’s more of a Lyttelton Farmers Market lover, playground enthusiast and pancake chef. You might spot him walking to work through the scenic Charlesworth Reserve.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/gorrie"></div>
                 </div>
               </div>
