Added social links

--- a/src/index.html
+++ b/src/index.html
@@ -213,6 +213,7 @@ ishome: true
               </div>
               <p class="text-black"><a href="mailto:hello@mediasuite.co.nz">hello@mediasuite.co.nz</a><br/>
               <a href="tel:+6433652887">+64 3 365 2887</a></p>
+              {% include social.html %}
             </div> <!-- .col -->
           </div> <!-- .cols-wrap -->
         </div> <!-- .faux-table-cell -->
