--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@ ishome: true
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/1-nzta.png" | prepend: site.baseurl }}" alt="" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/2-ccc.png" | prepend: site.baseurl }}" alt="" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/3-linz.png" | prepend: site.baseurl }}" alt="" /></span></li>
-            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/4-wine-marlborough.png" | prepend: site.baseurl }}" alt="" /></span></li>
+            <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/13-auckland-transport.jpg" | prepend: site.baseurl }}" alt="Auckland Transport" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/5-mdc.png" | prepend: site.baseurl }}" alt="" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/7-interlead.png" | prepend: site.baseurl }}" alt="" /></span></li>
             <li class="grid-item"><span class="grid-item-link js-image-fill" data-no-instant><img src="{{ "/img/client-logos/8-addington.png" | prepend: site.baseurl }}" alt="" /></span></li>
