--- a/src/404.html
+++ b/src/404.html
@@ -16,5 +16,5 @@ title: Media Suite | 404 Page not found
       <a href="{{ "/" | prepend: site.baseurl }}" class="drop-btn orange-bg">take me home</a>
     </div>
   </div>
-
+<!-- test -->
 </div> <!-- #main-wrap -->
