Added journeys to case study landing page.

--- a/src/case-studies/journeys/index.html
+++ b/src/case-studies/journeys/index.html
@@ -34,13 +34,13 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
     <div class="max-1000 align-left space-below-please">
       <p>Journeys delivers targeted functionality to key road user groups across the country, with a particular focus on urban commuters and commercial transport companies in and around main centres.</p>
 
-      <p>The national system, developed in partnership with New Zealand Transport Association, offers solutions to problems experienced in major cities and on arterial routes. It builds on Transport for Christchurch (TfC), which was rolled out in Canterbury post-quake.
+      <p>The national system, developed in partnership with NZ Transport Agency, offers solutions to problems experienced in major cities and on arterial routes. It builds on Transport for Christchurch (TfC), which was rolled out in Canterbury post-quake.
         </p>
 
       <h2 class="lowercase">Taking it national</h2>
       <img src="{{ "/img/case-studies/journeys-mobile.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image-right" />
       <p>
-        Following the 2011 earthquake, increasing driver frustration sparked a collaboration between Media Suite and the Christchurch Traffic Operation Centre.
+        Following the 2011 earthquake, increasing driver frustration sparked a collaboration between Media Suite and the Christchurch Transport Operation Centre.
       </p>
       <p>
         The first system of its kind in New Zealand, TfC aimed to advise road users of the ever-changing landscape as infrastructure in the city underwent large scale repair. Transport for Christchurch used three main data sources to provide road users with a real time information service. The original system pulled roadworks information from another Media Suite project, TMP for Christchurch. It used GeoSmart data (now owned by the AA) to show congestion on main routes, and fed live traffic camera footage through the public-facing website.
