--- a/src/case-studies/index.html
+++ b/src/case-studies/index.html
@@ -11,6 +11,26 @@ menuorder: 2
 
     <div class="case-study-items">
 
+      <div id="csi-tfc" class="case-study-item clearfix">
+        <a href="{{ "/case-studies/journeys" | prepend: site.baseurl }}" class="item-image">
+          <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
+        </a>
+        <div class="item-text">
+          <div class="item-text-head">
+            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/journeys" | prepend: site.baseurl }}">Journeys</a></h2>
+            <h3 class="item-sub-heading"><a href="{{ "/case-studies/journeys" | prepend: site.baseurl }}">NZ Transport Agency</a></h3>
+          </div>
+          <div class="item-text-body">
+            <div class="item-icons">
+              <i class="icon icon-desktop tip"></i>
+              <i class="icon icon-cog tip"></i>
+            </div>
+            <p>Journeys is a national system that pushes the boundaries of what current technology is capable of. It delivers targeted functionality to road user groups nationwide.</p>
+            <a href="{{ "/case-studies/journeys" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
+          </div>
+        </div> <!--.item-text -->
+      </div>  <!-- .case-study-item -->
+
       <div class="case-study-item clearfix">
         <a href="{{ "/case-studies/resource-consenting" | prepend: site.baseurl }}" class="item-image">
           <img src="{{ "/img/case-studies/cs-item-resource-consenting.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
@@ -85,26 +105,6 @@ menuorder: 2
             </div>
             <p>Cruise Guide puts the Marlborough Sounds in the palm of your hand. Media Suite joined forces with Marlborough District Council to provide the public with the best possible tool for navigation and recreation in the beautiful Sounds. We combined 25 open data sets with offline capability and expert local knowledge, all in a free app for Android and iPhone, and a website.</p>
             <a href="{{ "/case-studies/marlborough-cruise-guide" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
-          </div>
-        </div> <!--.item-text -->
-      </div>  <!-- .case-study-item -->
-
-      <div id="csi-tfc" class="case-study-item clearfix">
-        <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="item-image">
-          <img src="{{ "/img/case-studies/cs-item-transport-for-christchurch.png" | prepend: site.baseurl }}" alt="" class="jiggle" />
-        </a>
-        <div class="item-text">
-          <div class="item-text-head">
-            <h2 class="item-main-heading"><a class="text-sheen" href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Transport for Christchurch</a></h2>
-            <h3 class="item-sub-heading"><a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}">Christchurch City Council/NZTA</a></h3>
-          </div>
-          <div class="item-text-body">
-            <div class="item-icons">
-              <i class="icon icon-desktop tip"></i>
-              <i class="icon icon-mobile tip"></i>
-            </div>
-            <p>In the wake of the Canterbury earthquakes, Media Suite was engaged by the Christchurch Transport Operations Centre (A joint venture between the New Zealand Transport Authority, Christchurch City Council other local councils) to develop a long-term, web-based communication channel for the travelling public in the greater Christchurch region.</p>
-            <a href="{{ "/case-studies/transport-for-christchurch" | prepend: site.baseurl }}" class="drop-btn orange-bg small-btn">More on this&hellip;</a>
           </div>
         </div> <!--.item-text -->
       </div>  <!-- .case-study-item -->
