Added links to journeys case study

--- a/src/case-studies/journeys/index.html
+++ b/src/case-studies/journeys/index.html
@@ -32,7 +32,7 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
     <img src="{{ "/img/case-studies/journeys-banner.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
     <div class="max-1000 align-left space-below-please">
-      <p>Journeys delivers targeted functionality to key road user groups across the country, with a particular focus on urban commuters and commercial transport companies in and around main centres.</p>
+      <p><a href="https://journeys.nzta.govt.nz" target="_blank">Journeys</a> delivers targeted functionality to key road user groups across the country, with a particular focus on urban commuters and commercial transport companies in and around main centres.</p>
 
       <p>The national system, developed in partnership with NZ Transport Agency, offers solutions to problems experienced in major cities and on arterial routes. It builds on Transport for Christchurch (TfC), which was rolled out in Canterbury post-quake.
         </p>
@@ -43,7 +43,7 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
         Following the 2011 earthquake, increasing driver frustration sparked a collaboration between Media Suite and the Christchurch Transport Operation Centre.
       </p>
       <p>
-        The first system of its kind in New Zealand, TfC aimed to advise road users of the ever-changing landscape as infrastructure in the city underwent large scale repair. Transport for Christchurch used three main data sources to provide road users with a real time information service. The original system pulled roadworks information from another Media Suite project, TMP for Christchurch. It used GeoSmart data (now owned by the AA) to show congestion on main routes, and fed live traffic camera footage through the public-facing website.
+        The first system of its kind in New Zealand, TfC aimed to advise road users of the ever-changing landscape as infrastructure in the city underwent large scale repair. Transport for Christchurch used three main data sources to provide road users with a real time information service. The original system pulled roadworks information from another Media Suite project, <a href="/case-studies/myworksites/">TMP for Christchurch</a>. It used GeoSmart data (now owned by the AA) to show congestion on main routes, and fed live traffic camera footage through the public-facing website.
       </p>
       <p>
         TfC proved popular, and in 2014 Transport for Wellington was created to offer the same package of features in the capital. 
@@ -85,13 +85,13 @@ excerpt: Journeys is a national system that pushes the boundaries of what curren
       </p>
 
       <p>
-        Journeys will work in conjunction with MyWorksites, using the system’s real time roadworks data to inform road users. 
+        Journeys will work in conjunction with <a href="/case-studies/myworksites/">MyWorksites</a>, using the system’s real time roadworks data to inform road users. 
       </p>
 
       <img src="{{ "/img/case-studies/journeys-tablet.jpg" | prepend: site.baseurl }}" alt="" class="case-study-image image-max-100 space-below-please" />
 
       <h2 class="lowercase">
-        Making UX the Hero
+        making UX the hero
       </h2>
 
       <p>
