Removed amateur from Waynes profile

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -1269,7 +1269,7 @@ menuorder: 4
                   </div>
                 </div>
                 <div class="bio-body">
-                  <p>Wayne has been in software development since computers were pedal-powered and Whanganui was the place to be. A Full Stack dev with specialties in Ruby and Python, Wayne has 30 years experience in private and government work. These days, he likes being involved in projects that have meaningful impact on people’s lives. An amateur opera singer and flat white enthusiast, you’ll find him off on a biking holiday with his wife, or hitting the Canterbury roads, hills or trails.</p>
+                  <p>Wayne has been in software development since computers were pedal-powered and Whanganui was the place to be. A Full Stack dev with specialties in Ruby and Python, Wayne has 30 years experience in private and government work. These days, he likes being involved in projects that have meaningful impact on people’s lives. An opera singer and flat white enthusiast, you’ll find him off on a biking holiday with his wife, or hitting the Canterbury roads, hills or trails.</p>
                   <div class="fancy-pants-font js-blog-link" data-blog-link="/author/wayne"></div>
                 </div>
               </div>
