Added Illustration for Hasan, Wayne and Gorrie

--- a/src/people/index.html
+++ b/src/people/index.html
@@ -458,7 +458,7 @@ menuorder: 4
       <div id="person-Gorrie" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png" | prepend: site.baseurl }}" alt="Gorrie Coe" />
+          <img class="person-image" src="{{ "/img/people/gorrie.png" | prepend: site.baseurl }}" alt="Gorrie Coe" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -530,7 +530,7 @@ menuorder: 4
       <div id="person-hasan" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png" | prepend: site.baseurl }}" alt="Hasan Rayan" />
+          <img class="person-image" src="{{ "/img/people/hasan.png" | prepend: site.baseurl }}" alt="Hasan Rayan" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
@@ -1250,7 +1250,7 @@ menuorder: 4
       <div id="person-wayne" class="person-wrap js-iso-element">
         <a href="#" class="person js-show-bio">
           <div class="loader icon-spin1"></div>
-          <img class="person-image" src="{{ "/img/people/placeholder-male.png" | prepend: site.baseurl }}" alt="Wayne Carter" />
+          <img class="person-image" src="{{ "/img/people/wayne.png" | prepend: site.baseurl }}" alt="Wayne Carter" />
           <span class="burst-wrap scale-in">
             <span class="burst-text fancy-pants-font lowercase">Bio</span>
             <img class="burst bio-rotate" src="{{ "/img/people/starburst.png" | prepend: site.baseurl }}" alt="" />
